--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio von Sarah Meister</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio von Sarah Meister</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+<body>
+    <header>
+        <div class="left">
+            <img src="dein-bild-links.jpg" alt="Sarah Meister">
+            <h2>Sarah Meister</h2>
+            <p>Fotografin & Designstudentin</p>
+        </div>
+        <div class="right">
+            <img src="dein-bild-rechts.jpg" alt="Portfolio Header">
+            <h1>3D Artist & Concept Designer</h1>
+        </div>
+    </header>
 <body>
   <header>
     <h1>Sarah Meister – Fotografin & Designstudentin</h1>
