--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -10,45 +9,23 @@
 <body>
     <header>
         <div class="left">
-            <img src="dein-bild-links.jpg" alt="Sarah Meister">
+            <img src="sarah-meister.jpg" alt="Sarah Meister">
             <h2>Sarah Meister</h2>
             <p>Fotografin & Designstudentin</p>
         </div>
         <div class="right">
-            <img src="dein-bild-rechts.jpg" alt="Portfolio Header">
+            <img src="header-image.jpg" alt="Portfolio Header">
             <h1>3D Artist & Concept Designer</h1>
         </div>
     </header>
-<body>
-  <header>
-    <h1>Sarah Meister – Fotografin & Designstudentin</h1>
     <nav>
-      <a href="#portfolio">Werke</a>
-      <a href="#about">Über mich</a>
-      <a href="#contact">Kontakt</a>
-      <a href="resume.html">Lebenslauf</a>
+        <ul>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#about">Über mich</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Kontakt</a></li>
+            <li><a href="#impressum">Impressum</a></li>
+        </ul>
     </nav>
-  </header>
-
-  <section id="portfolio" class="portfolio">
-    <div class="project">
-      <img src="img/projekt1.jpg" alt="Projekt 1">
-      <div class="info">
-        <h2>Magische Uhrenwelt</h2>
-        <p>3D-Animation • 2025</p>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/projekt2.jpg" alt="Projekt 2">
-      <div class="info">
-        <h2>Licht und Stille</h2>
-        <p>Fotoreihe • 2024</p>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Sarah Meister</p>
-  </footer>
 </body>
 </html>
