--- a/index.html
+++ b/index.html
@@ -31,28 +31,38 @@
     nav a:hover {
       color: #0070f3;
     }
-    header {
+    .header-container {
       max-width: 1200px;
       margin: 0 auto;
-      padding: 60px 20px 40px;
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      gap: 40px;
+      align-items: center;
+      padding: 60px 20px;
     }
-    .header-content {
+    .header-left {
       display: flex;
-      flex-direction: column; /* Ändert die Richtung zu vertikal */
-      align-items: center; /* Zentriert alles */
+      flex-direction: column;
+      align-items: center;
       text-align: center;
     }
-    header img {
+    .header-left img {
       width: 120px;
       border-radius: 50%;
+      margin-bottom: 10px;
     }
-    header h1 {
-      font-size: 2.5em;
-      margin: 10px 0 5px;
+    .header-right {
+      text-align: left;
     }
-    header p {
-      margin: 5px 0 20px;
-      font-weight: 300;
+    .header-right h1 {
+      font-size: 3em;
+      margin-bottom: 20px;
+    }
+    .header-right img {
+      width: 100%;
+      max-height: 400px;
+      object-fit: cover;
+      border-radius: 12px;
     }
     main {
       max-width: 1200px;
@@ -84,21 +94,26 @@
 </head>
 <body>
 
-  <header>
-    <div class="header-content">
+  <div class="header-container">
+    <div class="header-left">
       <img src="https://via.placeholder.com/120" alt="Profilbild">
-      <h1>Sarah Meister</h1>
+      <h2>Sarah Meister</h2>
       <p>3D Artist & Concept Designer</p>
       <p>Ich kombiniere Technik mit Ästhetik, um visuelle Konzepte zum Leben zu erwecken.</p>
     </div>
-    <nav>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
-      <a href="#contact">Kontakt</a>
-      <a href="#impressum">Impressum</a>
-    </nav>
-  </header>
+    <div class="header-right">
+      <h1>Kreativität trifft Technik</h1>
+      <img src="https://via.placeholder.com/800x400" alt="Großes Bild">
+    </div>
+  </div>
+
+  <nav>
+    <a href="#portfolio">Portfolio</a>
+    <a href="#about">About</a>
+    <a href="#services">Services</a>
+    <a href="#contact">Kontakt</a>
+    <a href="#impressum">Impressum</a>
+  </nav>
 
   <main>
     <div class="grid">
