--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
     <div class="header-left">
       <img src="https://via.placeholder.com/120" alt="Profilbild">
       <h2>Sarah Meister</h2>
-      <p>3D Artist & Concept Designer</p>
+      <p>Kreativität trifft Technik</p>
       <p>Ich kombiniere Technik mit Ästhetik, um visuelle Konzepte zum Leben zu erwecken.</p>
     </div>
     <div class="header-right">
-      <h1>Kreativität trifft Technik</h1>
+      <h1>3D Artist & Concept Designer</h1>
       <img src="https://via.placeholder.com/800x400" alt="Großes Bild">
     </div>
   </div>
