--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <div class="header-container">
     <div class="header-left">
-      <img src="images/PB.jpg" alt="Profilbild">
+      <img src="images/PB.jpg" alt="PB.jpg">
       <h2>Sarah Meister</h2>
       <p>Kreativität trifft Technik</p>
       <p>Ich kombiniere Technik mit Ästhetik, um visuelle Konzepte zum Leben zu erwecken.</p>
