--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
       <p>Ich kombiniere Technik mit Ästhetik, um visuelle Konzepte zum Leben zu erwecken.</p>
       
       <div class="social-buttons">
-        <a href="https://www.instagram.com/deinusername" target="_blank" class="social-btn">
-          <img src="images/instagram-icon.png" alt="Instagram">
+        <a href="https://www.instagram.com/eymeistern" target="_blank" class="social-btn">
+          <img src="instagram.png" alt="">
         </a>
         <a href="https://www.behance.net/deinusername" target="_blank" class="social-btn">
-          <img src="images/behance-icon.png" alt="Behance">
+          <img src="bahance.png" alt="">
         </a>
       </div>
     </div>
