--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </div>
     <div class="header-right">
       <h1>3D Artist & Concept Designer</h1>
-      <img src="https://via.placeholder.com/800x400" alt="Großes Bild">
+      <img src="drip.png" alt="">
     </div>
   </div>
 
