--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
       border-radius: 50%;
       margin-bottom: 10px;
     }
+    .header-left h2 {
+      width: fit-content;
+      margin: 0 auto;
+    }
+    .header-left p {
+      max-width: fit-content;
+      margin: 5px auto;
+    }
     .social-buttons {
       display: flex;
       gap: 15px;
