--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+1<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -57,7 +57,7 @@
     }
     .header-left p {
       max-width: fit-content;
-      margin: 5px auto;
+      margin: 10px auto;
     }
     .social-buttons {
       display: flex;
