--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -28,49 +28,61 @@
       color: var(--text-dark);
     }
 
+    /* HEADER mit abgerundeter Unterkante */
     header {
       background-color: var(--bg-dark);
-      color: white;
-      padding: 1rem 2rem;
+      padding: 4rem 2rem 6rem;
+      text-align: center;
+      border-bottom-left-radius: 50% 20%;
+      border-bottom-right-radius: 50% 20%;
+      position: relative;
     }
 
-    .logo h1 {
-      margin: 0;
-      font-size: 2rem;
+    .logo img {
+      width: 100px;
+      height: auto;
     }
 
+    /* HERO-Bereich */
     #hero {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      align-items: center;
-      padding: 3rem 2rem;
-      background-color: white;
+      align-items: flex-start;
+      padding: 4rem 2rem 2rem;
       gap: 2rem;
+      position: relative;
+      z-index: 1;
     }
 
     .profile {
-      background-color: rgba(255, 255, 255, 0.9);
-      padding: 2rem;
+      position: relative;
+      background-color: white;
+      padding: 4rem 2rem 2rem;
       border-radius: 2rem;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
       text-align: center;
       max-width: 350px;
+      margin-top: 80px;
     }
 
     .profile-pic {
+      position: absolute;
+      top: -75px;
+      left: 50%;
+      transform: translateX(-50%);
       width: 150px;
       height: 150px;
       background-color: #ccc;
       border-radius: 50%;
-      margin: 0 auto 1rem;
       background-image: url('profilbild.jpg'); /* Bild ersetzen */
       background-size: cover;
       background-position: center;
+      border: 5px solid white;
     }
 
     .profile h2 {
-      margin: 0.5rem 0;
+      margin-top: 90px;
       font-size: 1.8rem;
       color: var(--primary);
     }
@@ -97,6 +109,7 @@
       text-align: center;
       font-style: italic;
       color: #666;
+      margin-top: 2rem;
     }
 
     nav {
@@ -133,10 +146,11 @@
   </style>
 </head>
 <body>
+
   <!-- HEADER -->
   <header>
     <div class="logo">
-      <h1>SM</h1>
+      <img src="logo.png" alt="Sarah Meister Logo" />
     </div>
   </header>
 
