--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sarah Meister | 3D & Web</title>
+  <title>Sarah Meister | 3D & Web Developement</title>
 
   <!-- Font Awesome für Icons -->
   <link
