--- a/index.html
+++ b/index.html
@@ -151,3 +151,62 @@
       <img src="logo.png" alt="Sarah Meister Logo" />
     </div>
   </header>
+
+  <!-- HERO-BEREICH -->
+  <section id="hero">
+    <div class="profile">
+      <div class="profile-pic">
+        <!-- Profilbild kommt hier -->
+      </div>
+      <h2>Sarah Meister</h2>
+      <p>3D Artist & Web Development</p>
+
+      <div class="socials">
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-artstation"></i></a>
+      </div>
+    </div>
+
+    <div class="hero-model">
+      <p>[3D Modell Platzhalter]</p>
+    </div>
+  </section>
+
+  <!-- NAVIGATION -->
+  <nav>
+    <a href="#about">About Me</a>
+    <a href="#work">My Work</a>
+    <a href="#blog">Blog</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <!-- HAUPTBEREICHE -->
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>Hier schreibst du später etwas über dich.</p>
+    </section>
+
+    <section id="work">
+      <h2>My Work</h2>
+      <p>Portfolio-Elemente oder Bilder kommen hier.</p>
+    </section>
+
+    <section id="blog">
+      <h2>Blog</h2>
+      <p>Deine Blog-Posts oder News.</p>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Kontaktformular oder E-Mail-Link.</p>
+    </section>
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy; 2025 Sarah Meister</p>
+  </footer>
+</body>
+</html>
