--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
   <!-- HEADER -->
   <header>
     <div class="logo">
-      <img src="logo.png" alt="Sarah Meister Logo" />
+      <img src="Logo Head.png"/>
     </div>
   </header>
 
