--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
       color: var(--text-dark);
     }
 
-    /* HEADER mit begrenzter Breite */
+    /* Kompakter HEADER */
     header {
       background-color: var(--bg-dark);
-      padding: 4rem 2rem 6rem;
+      padding: 2rem 2rem 2rem; /* weniger Höhe */
       text-align: center;
       position: relative;
-      max-width: 900px;     /* Begrenzung der Breite */
-      margin: 0 auto;       /* Zentrierung */
-      border-radius: 1rem;  /* Optional: abgerundete Ecken */
+      max-width: 900px;
+      margin: 0 auto;
+      border-radius: 1rem;
     }
 
     .logo img {
