--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       text-align: center;
       max-width: 350px;
       margin-top: 80px;
+      transform: translateX(20px);
     }
 
     .profile-pic {
