--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     .profile {
       position: relative;
-      background-color: white;
+      background-color: black;
       padding: 4rem 2rem 2rem;
       border-radius: 2rem;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
