--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       height: 150px;
       background-color: #ccc;
       border-radius: 50%;
-      background-image: url('profilbild.jpg'); /* Bild ersetzen */
+      background-image: url('profilbild.JPG');
       background-size: cover;
       background-position: center;
       border: 5px solid white;
