--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <style>
     :root {
-      --primary: #6c63ff;
+      --primary: #ffffff;
       --secondary: #00d1ff;
       --highlight: #ff4f81;
       --bg-light: #f7f7fa;
@@ -77,7 +77,6 @@
       background-image: url('profilbild.JPG');
       background-size: cover;
       background-position: center;
-      border: 5px solid white;
     }
 
     .profile h2 {
