--- a/index.html
+++ b/index.html
@@ -70,14 +70,16 @@
       top: -75px;
       left: 50%;
       transform: translateX(-50%);
-      width: 150px;
-      height: 150px;
+      width: 180px;
+      height: 180px;
       background-color: #ccc;
-      border-radius: 50%;
-      background-image: url('profilbild.JPG');
+      background-image: url('profilbild.jpg');
       background-size: cover;
       background-position: center;
-    }
+      border-radius: 1rem; /* leicht abgerundete Ecken für Card-Optik */
+      border: 5px solid white;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); /* sanfter Schatten für Tiefe */
+      }
 
     .profile h2 {
       margin-top: 90px;
