--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
       width: 180px;
       height: 180px;
       background-color: #ccc;
-      background-image: url('profilbild.jpg');
+      background-image: url('profilbild.JPG');
       background-size: cover;
       background-position: center;
-      border-radius: 1rem; /* leicht abgerundete Ecken für Card-Optik */
-      border: 5px solid white;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); /* sanfter Schatten für Tiefe */
+      border-radius: 1rem;
+      border: 2px solid white;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
       }
 
     .profile h2 {
