--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sarah Meister | 3D & Web Development</title>
-  <!-- Font Awesome für Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
     :root {
-      --primary: #ffffff;       /* Weiß für Text und Kontraste */
-      --secondary: #308b5d;     /* Smaragdgrün für Buttons, Icons */
-      --highlight: #204a3c;     /* Dunkleres Grün für Hover-Effekte */
-      --bg-light: #f5f5f5;      /* Helles Grau für helle Flächen */
-      --bg-dark: #0b0b0b;       /* Tiefschwarz für Hintergrund */
-      --text-dark: #1e1e1e;     /* Dunkles Grau für Lesbarkeit */
+      --primary: #ffffff;
+      --secondary: #308b5d;
+      --highlight: #204a3c;
+      --bg-light: #f5f5f5;
+      --bg-dark: #0b0b0b;
+      --text-dark: #1e1e1e;
+    }
+
+    * {
+      box-sizing: border-box;
     }
 
     body {
@@ -23,12 +26,10 @@
       color: var(--text-dark);
     }
 
-    /* HEADER ohne Wölbung */
     header {
       background-color: var(--bg-dark);
       padding: 4rem 2rem 6rem;
       text-align: center;
-      position: relative;
     }
 
     .logo img {
@@ -36,7 +37,6 @@
       height: auto;
     }
 
-    /* HERO-Bereich */
     #hero {
       display: flex;
       flex-wrap: wrap;
@@ -44,12 +44,9 @@
       align-items: flex-start;
       padding: 4rem 2rem 2rem;
       gap: 2rem;
-      position: relative;
-      z-index: 1;
     }
 
     .profile {
-      position: relative;
       background-color: var(--bg-dark);
       padding: 4rem 2rem 2rem;
       border-radius: 2rem;
@@ -57,7 +54,7 @@
       text-align: center;
       max-width: 350px;
       margin-top: 80px;
-      transform: translateX(100px);
+      flex: 1 1 300px;
     }
 
     .profile-pic {
@@ -72,7 +69,6 @@
       background-size: cover;
       background-position: center;
       border-radius: 1rem;
-      border: 0px solid white;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     }
 
@@ -101,7 +97,7 @@
     }
 
     .hero-model {
-      flex: 1;
+      flex: 1 1 300px;
       text-align: center;
       font-style: italic;
       color: #666;
@@ -139,22 +135,58 @@
       text-align: center;
       padding: 1rem;
     }
+
+    /* 📱 Responsive Anpassungen */
+    @media (max-width: 768px) {
+      header {
+        padding: 2rem 1rem 4rem;
+      }
+
+      #hero {
+        flex-direction: column;
+        padding: 2rem 1rem;
+      }
+
+      .profile {
+        margin-top: 40px;
+        transform: none;
+      }
+
+      .profile-pic {
+        width: 140px;
+        height: 140px;
+        top: -60px;
+      }
+
+      nav a {
+        display: block;
+        margin: 0.5rem 0;
+      }
+
+      .hero-model {
+        margin-top: 1rem;
+      }
+
+      section h2 {
+        font-size: 1.5rem;
+      }
+
+      .socials a {
+        font-size: 1.3rem;
+      }
+    }
   </style>
 </head>
 <body>
-  <!-- HEADER -->
   <header>
     <div class="logo">
       <img src="Logo Head.png" />
     </div>
   </header>
 
-  <!-- HERO-BEREICH -->
   <section id="hero">
     <div class="profile">
-      <div class="profile-pic">
-        <!-- Profilbild kommt hier -->
-      </div>
+      <div class="profile-pic"></div>
       <h2>Sarah Meister</h2>
       <p>3D Artist & Web Development</p>
       <div class="socials">
@@ -168,7 +200,6 @@
     </div>
   </section>
 
-  <!-- NAVIGATION -->
   <nav>
     <a href="#about">About Me</a>
     <a href="#work">My Work</a>
@@ -176,7 +207,6 @@
     <a href="#contact">Contact</a>
   </nav>
 
-  <!-- HAUPTBEREICHE -->
   <main>
     <section id="about">
       <h2>About Me</h2>
@@ -196,7 +226,6 @@
     </section>
   </main>
 
-  <!-- FOOTER -->
   <footer>
     <p>&copy; 2025 Sarah Meister</p>
   </footer>
