--- a/index.html
+++ b/index.html
@@ -3,125 +3,231 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Salvatore | 3D Artist & Web Developer</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+  <title>Sarah Meister | 3D & Web Development</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
+    :root {
+      --primary: #ffffff;
+      --secondary: #308b5d;
+      --highlight: #204a3c;
+      --bg-light: #f5f5f5;
+      --bg-dark: #0b0b0b;
+      --text-dark: #1e1e1e;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      font-family: 'Orbitron', sans-serif;
-      background: radial-gradient(circle at center, #0f0f0f, #000);
-      overflow: hidden;
-      color: white;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: var(--bg-light);
+      color: var(--text-dark);
     }
 
-    .hero {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-      z-index: 1;
-    }
-
-    .glass {
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 20px;
-      padding: 40px;
-      backdrop-filter: blur(10px);
-      box-shadow: 0 0 30px rgba(255, 255, 255, 0.2);
+    header {
+      background-color: var(--bg-dark);
+      padding: 4rem 2rem 4rem;
       text-align: center;
-      max-width: 600px;
     }
 
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 20px;
+    .logo img {
+      width: 100px;
+      height: auto;
     }
 
-    .typing {
-      font-size: 1.5rem;
-      color: #00ffe0;
-      height: 40px;
+    #hero {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: flex-start;
+      padding: 4rem 2rem 2rem;
+      gap: 2rem;
     }
 
-    canvas {
+    .profile {
+      background-color: var(--bg-dark);
+      padding: 4rem 2rem 2rem;
+      border-radius: 2rem;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      max-width: 350px;
+      margin-top: 80px;
+      flex: 1 1 300px;
+    }
+
+    .profile-pic {
       position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 0;
+      top: -75px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 180px;
+      height: 180px;
+      background-color: #ccc;
+      background-image: url('profilbild.JPG');
+      background-size: cover;
+      background-position: center;
+      border-radius: 1rem;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    }
+
+    .profile h2 {
+      margin-top: 90px;
+      font-size: 1.8rem;
+      color: var(--primary);
+    }
+
+    .profile p {
+      margin-bottom: 1rem;
+      font-weight: 500;
+      color: var(--primary);
+    }
+
+    .socials a {
+      margin: 0 0.5rem;
+      font-size: 1.5rem;
+      color: var(--secondary);
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+
+    .socials a:hover {
+      color: var(--highlight);
+    }
+
+    .hero-model {
+      flex: 1 1 300px;
+      text-align: center;
+      font-style: italic;
+      color: #666;
+      margin-top: 2rem;
+    }
+
+    nav {
+      background-color: var(--secondary);
+      padding: 1rem;
+      text-align: center;
+    }
+
+    nav a {
+      margin: 0 1rem;
+      color: var(--primary);
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    main {
+      padding: 2rem;
+    }
+
+    section {
+      margin-bottom: 3rem;
+    }
+
+    section h2 {
+      color: var(--highlight);
+    }
+
+    footer {
+      background-color: var(--bg-dark);
+      color: var(--primary);
+      text-align: center;
+      padding: 1rem;
+    }
+
+    /* 📱 Responsive Anpassungen */
+    @media (max-width: 768px) {
+      header {
+        padding: 2rem 1rem 4rem;
+      }
+
+      #hero {
+        flex-direction: column;
+        padding: 2rem 1rem;
+      }
+
+      .profile {
+        margin-top: 40px;
+        transform: none;
+      }
+
+      .profile-pic {
+        width: 140px;
+        height: 140px;
+        top: -60px;
+      }
+
+      nav a {
+        display: block;
+        margin: 0.5rem 0;
+      }
+
+      .hero-model {
+        margin-top: 1rem;
+      }
+
+      section h2 {
+        font-size: 1.5rem;
+      }
+
+      .socials a {
+        font-size: 1.3rem;
+      }
     }
   </style>
 </head>
 <body>
-  <canvas id="particles"></canvas>
-  <div class="hero">
-    <div class="glass">
-      <h1>Hi, ich bin Salvatore</h1>
-      <div class="typing" id="typing"></div>
+  <header>
+    <div class="logo">
+      <img src="Logo Head.png" />
     </div>
-  </div>
+  </header>
 
-  <script>
-    const words = ["3D Artist", "Web Developer", "Visionary Creator"];
-    let i = 0, j = 0, current = "", isDeleting = false;
+  <section id="hero">
+    <div class="profile">
+      <div class="profile-pic"></div>
+      <h2>Sarah Meister</h2>
+      <p>3D Artist & Web Development</p>
+      <div class="socials">
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-artstation"></i></a>
+      </div>
+    </div>
+    <div class="hero-model">
+      <p>[3D Modell Platzhalter]</p>
+    </div>
+  </section>
 
-    function type() {
-      const typing = document.getElementById("typing");
-      if (i < words.length) {
-        if (!isDeleting && j <= words[i].length) {
-          current = words[i].substring(0, j++);
-        } else if (isDeleting && j >= 0) {
-          current = words[i].substring(0, j--);
-        }
+  <nav>
+    <a href="#about">About Me</a>
+    <a href="#work">My Work</a>
+    <a href="#blog">Blog</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-        typing.textContent = current;
+  <main>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>Hier schreibst du später etwas über dich.</p>
+    </section>
+    <section id="work">
+      <h2>My Work</h2>
+      <p>Portfolio-Elemente oder Bilder kommen hier.</p>
+    </section>
+    <section id="blog">
+      <h2>Blog</h2>
+      <p>Deine Blog-Posts oder News.</p>
+    </section>
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Kontaktformular oder E-Mail-Link.</p>
+    </section>
+  </main>
 
-        if (!isDeleting && j === words[i].length) {
-          isDeleting = true;
-          setTimeout(type, 1000);
-        } else if (isDeleting && j === 0) {
-          isDeleting = false;
-          i = (i + 1) % words.length;
-          setTimeout(type, 500);
-        } else {
-          setTimeout(type, isDeleting ? 50 : 100);
-        }
-      }
-    }
-
-    type();
-
-    // Simple particle background
-    const canvas = document.getElementById("particles");
-    const ctx = canvas.getContext("2d");
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-
-    const particles = Array.from({ length: 100 }, () => ({
-      x: Math.random() * canvas.width,
-      y: Math.random() * canvas.height,
-      r: Math.random() * 2 + 1,
-      dx: (Math.random() - 0.5) * 0.5,
-      dy: (Math.random() - 0.5) * 0.5
-    }));
-
-    function drawParticles() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = "#00ffe0";
-      particles.forEach(p => {
-        ctx.beginPath();
-        ctx.arc(p.x, p.y, p.r, 0, Math.PI * 2);
-        ctx.fill();
-        p.x += p.dx;
-        p.y += p.dy;
-
-        if (p.x < 0 || p.x > canvas.width) p.dx *= -1;
-        if (p.y < 0 || p.y > canvas.height) p.dy *= -1;
-      });
-      requestAnimationFrame(drawParticles);
-    }
-
-    drawParticles();
-  </script>
+  <footer>
+    <p>&copy; 2025 Sarah Meister</p>
+  </footer>
 </body>
 </html>
