--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     }
 
     .profile-pic {
-      position: absolute;
+      position: relative;
       top: -75px;
       left: 50%;
       transform: translateX(-50%);
