--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     header {
       background-color: var(--bg-dark);
-      padding: 1rem 1rem 1rem;
+      padding: 1rem;
       text-align: center;
     }
 
@@ -47,6 +47,7 @@
     }
 
     .profile {
+      position: relative;
       background-color: var(--bg-dark);
       padding: 4rem 2rem 2rem;
       border-radius: 2rem;
@@ -58,7 +59,7 @@
     }
 
     .profile-pic {
-      position: relative;
+      position: absolute;
       top: -100px;
       left: 50%;
       transform: translateX(-50%);
@@ -73,7 +74,7 @@
     }
 
     .profile h2 {
-      margin-top: 0px;
+      margin-top: 80px;
       font-size: 1.8rem;
       color: var(--primary);
     }
@@ -94,14 +95,6 @@
 
     .socials a:hover {
       color: var(--highlight);
-    }
-
-    .hero-model {
-      flex: 1 1 300px;
-      text-align: center;
-      font-style: italic;
-      color: #666;
-      margin-top: 2rem;
     }
 
     nav {
@@ -127,6 +120,12 @@
 
     section h2 {
       color: var(--highlight);
+      text-align: center;
+    }
+
+    #3d-container {
+      width: 100%;
+      height: 500px;
     }
 
     footer {
@@ -136,12 +135,7 @@
       padding: 1rem;
     }
 
-    /* 📱 Responsive Anpassungen */
     @media (max-width: 768px) {
-      header {
-        padding: 2rem 1rem 4rem;
-      }
-
       #hero {
         flex-direction: column;
         padding: 2rem 1rem;
@@ -149,7 +143,6 @@
 
       .profile {
         margin-top: 40px;
-        transform: none;
       }
 
       .profile-pic {
@@ -161,18 +154,6 @@
       nav a {
         display: block;
         margin: 0.5rem 0;
-      }
-
-      .hero-model {
-        margin-top: 1rem;
-      }
-
-      section h2 {
-        font-size: 1.5rem;
-      }
-
-      .socials a {
-        font-size: 1.3rem;
       }
     }
   </style>
@@ -195,9 +176,6 @@
         <a href="#"><i class="fab fa-artstation"></i></a>
       </div>
     </div>
-    <div class="hero-model">
-      <p>[3D Modell Platzhalter]</p>
-    </div>
   </section>
 
   <nav>
@@ -212,14 +190,22 @@
       <h2>About Me</h2>
       <p>Hier schreibst du später etwas über dich.</p>
     </section>
+
     <section id="work">
       <h2>My Work</h2>
       <p>Portfolio-Elemente oder Bilder kommen hier.</p>
     </section>
+
+    <section id="my-3d-model">
+      <h2>Interaktives 3D-Modell</h2>
+      <div id="3d-container"></div>
+    </section>
+
     <section id="blog">
       <h2>Blog</h2>
       <p>Deine Blog-Posts oder News.</p>
     </section>
+
     <section id="contact">
       <h2>Contact</h2>
       <p>Kontaktformular oder E-Mail-Link.</p>
@@ -229,5 +215,73 @@
   <footer>
     <p>&copy; 2025 Sarah Meister</p>
   </footer>
+
+  <!-- Three.js & Shader -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/examples/js/loaders/GLTFLoader.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/examples/js/controls/OrbitControls.js"></script>
+
+  <script>
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / 500, 0.1, 1000);
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(window.innerWidth, 500);
+    document.getElementById('3d-container').appendChild(renderer.domElement);
+
+    const controls = new THREE.OrbitControls(camera, renderer.domElement);
+    camera.position.z = 2;
+
+    const light = new THREE.HemisphereLight(0xffffff, 0x444444);
+    scene.add(light);
+
+    const vertexShader = `
+      uniform float hover;
+      varying vec2 vUv;
+      void main() {
+        vUv = uv;
+        vec3 displaced = position + normal * hover * 0.2;
+        gl_Position = projectionMatrix * modelViewMatrix * vec4(displaced, 1.0);
+      }
+    `;
+
+    const fragmentShader = `
+      varying vec2 vUv;
+      void main() {
+        gl_FragColor = vec4(vUv, 1.0, 1.0);
+      }
+    `;
+
+    const uniforms = {
+      hover: { value: 0 }
+    };
+
+    const shaderMaterial = new THREE.ShaderMaterial({
+      vertexShader,
+      fragmentShader,
+      uniforms
+    });
+
+    const loader = new THREE.GLTFLoader();
+    loader.load('assets/modell.glb', function (gltf) {
+      gltf.scene.traverse(obj => {
+        if (obj.isMesh) obj.material = shaderMaterial;
+      });
+      scene.add(gltf.scene);
+    });
+
+    document.getElementById('3d-container').addEventListener('mouseenter', () => {
+      uniforms.hover.value = 1;
+    });
+
+    document.getElementById('3d-container').addEventListener('mouseleave', () => {
+      uniforms.hover.value = 0;
+    });
+
+    function animate() {
+      requestAnimationFrame(animate);
+      renderer.render(scene, camera);
+    }
+    animate();
+  </script>
 </body>
 </html>
